# Zoo-Simulator

./: Animal.cpp  Animal.h  CMakeLists.txt  Giraffe.cpp  Giraffe.h  Lion.cpp  Lion.h  Monkey.cpp  Monkey.h  Otter.cpp  Otter.h  Penguin.cpp  Penguin.h  README.md  Zoo.cpp  Zoo.h  ZooTesting.cpp  main.cpp
